[package]
name = "thunder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddk = { git = "https://github.com/LayerTwo-Labs/ddk", rev = "8ebd5e4118c1a9196632290f761a8abc2c72ec5f" }

anyhow = "1.0.72"
project-root = "0.2.2"
serde = { version = "1.0.179", features = ["derive"] }
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
bincode = "1.3.3"
clap = { version = "4.3.19", features = ["derive"] }
dirs = "5.0.1"
eframe = "0.22.0"
itertools = "0.11.0"
rand = "0.8.5"
tiny-bip39 = "1.0.0"
sha256 = "1.2.2"
serde_json = "1.0.104"
human-size = "0.4.3"
