[package]
name = "thunder"
version = "0.1.0"
edition = "2021"
description = "Example GUI sidechain app built using ddk."
authors = [ "Nikita Chashchinskii" ]

[dependencies]
ddk = { git = "https://github.com/LayerTwo-Labs/ddk", rev = "0cb961b678b334f4990bfa36ed45021ffffa7f7a" }

anyhow = "1.0.72"
serde = { version = "1.0.179", features = ["derive"] }
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
bincode = "1.3.3"
clap = { version = "4.3.19", features = ["derive"] }
dirs = "5.0.1"
eframe = "0.22.0"
tiny-bip39 = "1.0.0"
human-size = "0.4.3"

[profile.release]
lto = "fat"
